# Trisection-comp

./: .env.example  .gitignore  INSTALL.md  LICENSE  Makefile  README.md  __init__.py  bench.py  bhrt.py  demo.sh  isosig.py  lsan.supp  triangulation.py  ts_color.py
.github/workflows/: ci.yml
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bhrt-bench  bhrt-cli  bhrt-diagram  bhrt-test  cmake_install.cmake
cpp/: .CMakeLists.txt.swp  CMakeLists.txt  bhrt_bench.cpp  bhrt_c_api.cpp  bhrt_c_api.h  bhrt_cli.c  bhrt_diagram.cpp  bhrt_format.cpp  bhrt_test.cpp  bhrt_trisect.hpp  bindings.cpp  diagram.cpp  invariants.cpp  regina_bridge.cpp  regina_io.hpp  search_cpu.cpp  tri_io.cpp  triangulation.cpp  ts_color.cpp
cuda/: candidate_pack.cu  score_moves.cu  smoke.cu  ts_scan.cu
data/: known_trisection_genus.txt  spreer_tillmann.esig
data/manifests/: census.json
docs/: CENSUS.md  HANDOUT.md  PRESENTATION.md  RUNSHEET.md  SUMMARY.md  architecture.md  reproducibility.md
examples/: cp2.tri  s2xs2.tri
pytest-cache-files-0myaz7g3/v/cache/: lastfailed  nodeids
python/: README.md  pyproject.toml
python/bhrt/: __init__.py  benchmark.py  bhrt.py  cli.py  diagram.py  gpu_score.py  invariants.py  search_cpu.py  tri_io.py  ts_color.py
python/bhrt_trisect/: cli.py  diagram.py  invariants.py  moves.py  regina_bridge.py  search_cpu.py  search_gpu.py  subprocess_api.py  tri_io.py
sage/: invariants.py  trisection_invariants.py  twisted_invariants.py
scripts/: compute_invariants.sh  reduce_genus.sh  reproduce_paper.sh  scan_census.py  scan_census.sh
tests/: conftest.py  test_cpp_binary.py  test_invariants.py
